# wireless-display-demo

./: CMakeLists.txt  README.md  build.sh  deploy.sh  mdns_service.c  requirements.txt
config/: airplay.conf  miracast.conf
src/: main.c
src/airplay/: airplay_server.c  airplay_server.h  mdns_service.c  mdns_service.h
src/miracast/: miracast_server.c  miracast_server.h  wifi_direct.c  wifi_direct.h
src/video/: video_decoder.c  video_decoder.h
